--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,4 @@
-# Django stuff
-*.egg-info
-*.pot
-*.py[co]
-.tox/
-__pycache__
-MANIFEST
-dist/
-docs/_build/
-docs/locale/
-node_modules/
-tests/coverage_html/
-tests/.coverage
-build/
-tests/report/
+.vscode
 
-**/.vscode
+node_modules
+dist
